# opencad

./: .editorconfig  .env.example  .eslintrc.json  .firebaserc  .gitignore  .npmrc  .prettierignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  firebase.json  firestore.rules  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
deploy/: import.sh
docs/: TDD_GUIDE.md  contract-audit.md  prd-alignment-audit.md
e2e/: accessibility.spec.ts  collaboration.spec.ts  core-flows.spec.ts  document.spec.ts  helpers.ts  house-build.spec.ts  (+4 more)
server/: .env.example  Cargo.toml  Dockerfile
server/data/: plugins-catalogue.json
server/migrations/: 20240101000001_initial.sql  20250417000001_add_users_and_trials.sql  20260417000001_add_version_history.sql  20260417000002_add_feedback.sql  20260421000001_add_marketplace.sql  20260421000002_add_publisher_stripe.sql  20260421000003_add_user_subscriptions.sql  20260421000004_add_project_branches.sql  20260421000005_add_project_members.sql
server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  seed.rs  state.rs  storage.rs
server/src/routes/: auth_routes.rs  branches.rs  documents.rs  feedback.rs  files.rs  health.rs  llm.rs  members.rs  mod.rs  plugins.rs  projects.rs  publishers.rs  subscriptions.rs  versions.rs  ws.rs
(+491 files in other folders)
