[package]
name = "opencad-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opencad-server"
path = "src/main.rs"

[dependencies]
axum        = { version = "0.7", features = ["ws", "multipart"] }
axum-extra  = { version = "0.9", features = ["typed-header"] }
tokio       = { version = "1",   features = ["full"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace", "limit"] }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

sqlx        = { version = "0.8", features = [
                  "runtime-tokio-rustls", "postgres",
                  "uuid", "chrono", "migrate"] }

uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }

anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy     = "0.15"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
dashmap     = "6"
bytes       = "1"
async-trait = "0.1"

# Auth
jsonwebtoken = "9"
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
